--- a/cleaning/clean1_loginDetails.ipynb
+++ b/cleaning/clean1_loginDetails.ipynb
@@ -4,12 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this cleaning step dates that appear in Department fields are removed and inserted in a separate column"
+    "## Cleaning objectives\n",
+    "- Dates that appear in Department fields are removed and inserted in a separate column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,19 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create output file \n",
-    "out = open(\"outputs/cleaning1_loginDetails.csv\", \"w\")\n",
+    "out = open(\"outputs/clean1_loginDetails.csv\", \"w\")\n",
     "writer = csv.DictWriter(out, fieldnames=[\"adm_no\", \"sex\",\"dept\", \"borrower_type\", \"entry_date\",\"entry_time\"])\n",
     "writer.writeheader()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +64,13 @@
     "        lst.append({row[\"Department\"]:[]})\n",
     "        date = row[\"Department\"]\n",
     "    else:\n",
-    "        if(row[\"Department\"] != \"\"):\n",
+    "        if row[\"Borrower No.\"] != \"\":\n",
     "            (lst[-1][date]).append(row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
