--- a/cleaning/clean1_loginDetails.ipynb
+++ b/cleaning/clean1_loginDetails.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cleaning objectives\n",
-    "- Dates that appear in Department fields are removed and inserted in a separate column"
+    "## Objectives\n",
+    "- Dates that appear in Department field are removed and inserted in a separate column"
    ]
   },
   {
