Include possible replacement of EEE -> EE

--- a/cleaning/clean2_loginDetails.ipynb
+++ b/cleaning/clean2_loginDetails.ipynb
@@ -133,7 +133,10 @@
    "outputs": [],
    "source": [
     "# replacing CSE with CS for Computer Science department\n",
-    "df2[\"department\"] = df2[\"department\"].replace(['CSE'], 'CS')"
+    "df2[\"department\"] = df2[\"department\"].replace(['CSE'], 'CS')\n",
+    "\n",
+    "# replacing EEE with EE for Electronics\n",
+    "# df2[\"department\"] = df2[\"department\"].replace(['EEE'], 'EE')\n"
    ]
   },
   {
