Remove duplicate ids from library users.csv

--- a/cleaning/clean2_loginDetails.ipynb
+++ b/cleaning/clean2_loginDetails.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "Index(['adm_no', 'sex', 'dept', 'borrower_type', 'entry_date', 'entry_time'], dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,19 +186,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>type</th>\n",
+       "      <th>department</th>\n",
+       "      <th>batch</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14ME4339</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>ME</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14ME4253</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14ME4457</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>ME</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14ME4409</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>ME</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13EC4046</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37915</th>\n",
+       "      <td>21B162</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37934</th>\n",
+       "      <td>21B541</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37958</th>\n",
+       "      <td>20L594</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>ME</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37987</th>\n",
+       "      <td>21B449</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37988</th>\n",
+       "      <td>21B659</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2091 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             id sex     type department batch\n",
+       "0      14ME4339   M  Student         ME  2014\n",
+       "1      14ME4253   M  Student        NaN   NaN\n",
+       "2      14ME4457   M  Student         ME  2014\n",
+       "3      14ME4409   M  Student         ME  2014\n",
+       "4      13EC4046   M  Student        NaN   NaN\n",
+       "...         ...  ..      ...        ...   ...\n",
+       "37915    21B162   M  Student         CE  2021\n",
+       "37934    21B541   M  Student         IT  2021\n",
+       "37958    20L594   M  Student         ME  2019\n",
+       "37987    21B449   M  Student         IT  2021\n",
+       "37988    21B659   M  Student         IT  2021\n",
+       "\n",
+       "[2091 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# extract details of library users and save it in separate file\n",
     "library_users = df2[[\"adm_no\", \"sex\", \"borrower_type\", \"department\", \"batch\"]]\n",
     "library_users = library_users.rename(columns={\"borrower_type\": \"type\", \"adm_no\": \"id\"})\n",
-    "library_users.to_csv(\"outputs/clean2_library_users.csv\", index=False)"
+    "library_users_unique = library_users.drop_duplicates(subset=['id'])\n",
+    "library_users_unique.to_csv(\"outputs/clean2_library_users.csv\", index=False)\n",
+    "library_users_unique"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
