--- a/cleaning/clean3_loginDetails.ipynb
+++ b/cleaning/clean3_loginDetails.ipynb
@@ -19,7 +19,7 @@
     "import pandas as pd\n",
     "import numpy as np \n",
     "import csv\n",
-    "import re\n"
+    "import re"
    ]
   },
   {
