Perform various analysis

--- a/cleaning/clean5_library_users.ipynb
+++ b/cleaning/clean5_library_users.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv"
+    "import csv\n",
+    "import numpy as np"
    ]
   },
   {
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +37,7 @@
        "63"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,18 +53,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "546\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "count = 0\n",
     "for row in reader:\n",
+    "\n",
     "    if (row[\"department\"] in dept_names):\n",
+    "        if row[\"department\"] == \"IT\":\n",
+    "            count += 1\n",
     "        row[\"type\"] = \"student\"\n",
     "    else:\n",
     "        row[\"type\"] = \"staff\"\n",
     "    writer.writerow(row)\n",
-    "    "
+    "print(count)"
    ]
   },
   {
