analysis small updates

--- a/analysis/favourite_book_.ipynb
+++ b/analysis/favourite_book_.ipynb
@@ -176,7 +176,7 @@
     "    addlabels(x, y)\n",
     "    # vertically align x axis values\n",
     "    plt.xticks(range(len(x)), x, rotation='vertical')\n",
-    "    plt.title(f\"Favourite book (all  books in library)\")\n",
+    "    plt.title(f\"Favourite Book (all  books in library)\")\n",
     "    plt.xlabel(\"Title\")\n",
     "    plt.ylabel(\"Number of books\")\n",
     "    plt.show()\n",
@@ -184,7 +184,7 @@
     "    fig = plt.figure(figsize=(10, 5))\n",
     "    # use autopct to show percentage on diagram\n",
     "    plt.pie(y, labels=x, autopct='%1.1f%%')\n",
-    "    plt.title(f\"Favourite author (all books in library)\")\n",
+    "    plt.title(f\"Favourite Author (all books in library)\")\n",
     "    plt.show()\n"
    ]
   },
