--- a/analysis/favourite_publisher.ipynb
+++ b/analysis/favourite_publisher.ipynb
@@ -175,15 +175,15 @@
     "    addlabels(x, y)\n",
     "    # vertically align x axis values\n",
     "    plt.xticks(range(len(x)), x, rotation='vertical')\n",
-    "    plt.title(f\"Favourite publisher (all  books in library including copies)\")\n",
+    "    plt.title(f\"Favourite Pubblisher (all  books in library including copies)\")\n",
     "    plt.xlabel(\"Publisher\")\n",
-    "    plt.ylabel(\"Number of books\")\n",
+    "    plt.ylabel(\"Number of Books\")\n",
     "    plt.show()\n",
     "elif(chart_type == \"pie\"):\n",
     "    fig = plt.figure(figsize=(13, 8))\n",
     "    # use autopct to show percentage on diagram\n",
     "    plt.pie(y, labels=x, autopct='%1.1f%%')\n",
-    "    plt.title(f\"Favourite publisher (all books in library including copies)\")\n",
+    "    plt.title(f\"Favourite Publisher (all books in library including copies)\")\n",
     "    plt.show()\n"
    ]
   },
